# oop_exercise_07

./: CMakeLists.txt  Document.cpp  Document.h  README.md  bline.h  builder.h  canvas.h  circle.cpp  circle.h  color.cpp  color.h  curve_line.cpp  curve_line.h  figure.h  loader.cpp  loader.h  main.cpp  polygon.cpp  polygon.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  report_oop_07.docx  rhombus.h  sdl.cpp  sdl.h  square.h  trapezoid.h  triangle.cpp  triangle.h  vertex.h
